--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -49,4 +49,4 @@ As described in the design section, a requirement from the client model was to s
 
 Another significant evolution in our code, also centred around our use of Swing, was a need to overcome a problem with rendering the contact list. As a contact list naturally follows a tree structure, with branches arranged by status or group name, we thought the Swing `JTree' component was a suitable choice to use in our implementation. JTrees allow elements to be added and removed like leaves on branches, which is suitable for when contacts are added, removed, or their status changes. However, we experienced rendering problems with the JTree component in Swing across different platforms. On Windows-based platforms, friend elements were pushed together, and it ruined the appearance of the contact list. After significant hours of work to attempt to sort these rendering issues, we investigated using JLists instead. [write about writing own renderer, write about merits of JLists compared to JTrees.]
 
-A difficulty we had as a result of trying to separate concerns was that the networking component would take care of log ins, 
+Another problem that required a significant change to our code, and made our client more suited to future changes, was the need to reconcile the atomicity of the
